Add Techs and reorder, and add usage policy
Only very, very minor CSS edits. Nothing to worry about! :)

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -10,7 +10,7 @@ order: 3
 
 <section id="mission">
 	<h2>Mission + Vision</h2>
-	<p>All humans are dreamers, creators, and achievers. Our mission is to provide the place, the tools, and the support to empower people to do just that. The Scholars' Lab Makerspace is strategically situated within the UVA Library to be open, provide a low barrier of entry to making, and be a helpful resource of information, technology and support. Our space is open to everyone, including the public, and proactively encourages those in underrepresented academic studies, ethnicities, genders, economic classes and skill levels to come learn, make, and research.</p>
+	<p>All humans are dreamers, creators, and achievers. Our mission is to provide the place, the tools, and the support to empower people to dream, create and achieve. The Scholars' Lab Makerspace is strategically situated within the UVA Library to be open, provide a low barrier of entry to making, and be a helpful resource of information, technology and support. Our space is open to everyone, including the public, and proactively encourages those in underrepresented academic studies, ethnicities, genders, economic classes and skill levels to come learn, make, and research.</p>
     <p>The Makerspace staff provides consultations and instruction for all your electronics, crafting, textiles, laser cutting, and 3D printing projects <a href="https://www.library.virginia.edu/hours/">whenever the Makerspace is open</a>, or by appointment. Please drop in, or send inquiries to <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a>.</p>
 	<p>Or schedule a consultation with Ammon, manager of our Makerspace.</p>
 	<script>
@@ -83,13 +83,24 @@ order: 3
 		button to book equipment, or visit <a target="_blank" href="https://cal.lib.virginia.edu/reserve/equipment/Makerspace">the equipment page</a> to see a full list of our equipment.</p>
 	<p>All equipment is maintained for use in the Makerspace and is not available for check out at this time. Don't see the equipment you need here? Visit <a href="http://makergrounds.virginia.edu">makergrounds.virginia.edu</a> for other shops, labs, and places for making at UVA.</p>
 	<p>Questions? Hesitant about joining us in the Makerspace? You belong here, and we're happy to meet with you, answer questions, and give you a tour to help you feel more at home. Email <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to let us know you're curious about our Makerspace.</p>
+	<h3>Usage Policy</h3>
+	<p>The Makerspace technology may only be used for lawful purposes. No one is permitted to 3D print an object that is:
+	<ul>
+		<li>prohibited by local, state, or federal law.</li>
+		<li>unsafe, harmful, dangerous, or poses an immediate threat to the well-being of others, including weapon accessories (See: <a href="https://uvapolicy.virginia.edu/policy/sec-030">UVA Weapons Policy</a>).</li>
+		<li>obscene or otherwise inappropriate for the library environment. The Makerspace Technologists reserve the right to refuse requests based on the <a href="https://library.virginia.edu/policies/use-of-the-library">UVA Library Usage Policy</a>, UVA general policies, or for any reason a Technologist feels is inappropriate.</li>
+		<li>in violation of another's intellectual property rights. For example, you cannot reproduce material subject to copyright, patent, or trademark protection.</li>
+		<li>used for resale or other commercial purposes.</li>
+		<li>defective or poorly suited for equipment in the Makerspace,</li>
+	</ul>
+	The Library and Technologists reserve the right to refuse any request.</p>
 	<h3>Faculty Consultations + Course Integrations</h3>
 	<p>Our Makerspace is an active participant in academic research. We support scholars' independent and collaborative work to explore, understand, and report on emerging technologies, methodologies, and pedagogies in a variety of disciplines. We love working with faculty to support class projects! Send your requests and ideas to our Makerspace Manager <a href="ammon@virginia.edu">Ammon Shepherd</a>.</p>
 </section>
 
 <section id="whats-in-the-makerspace">
 <h2>What's in the makerspace</h2>
-<p>See our full list of equipment, including electronics, crafting equipment, on the <a href="https://cal.lib.virginia.edu/equipment?lid=264">Library Equipment Reservation site</a>.</p>
+<p>See our full list of equipment, including electronics and crafting equipment, on the <a href="https://cal.lib.virginia.edu/equipment?lid=264">Library Equipment Reservation site</a>.</p>
 <div id="textiles">
 	<h3>Textiles</h3>
 		<p>We have two Bernina 350 Series sewing machines and a Juki MO-644D serger available for reservation or walk-in use.</p>
@@ -170,43 +181,20 @@ order: 3
 
 <section id="makerspace-staff">
 	<h2>Makerspace Technologists</h2>
- 	<h3>Makerspace Manager &amp; Lead Research Technologist</h3>
-	<ul>
-		<li>
-			<img src="{{ site.baseurl }}/assets/img/people/ammon-shepherd.jpg" alt="Ammon Shepherd"><br>
-			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/ammon-shepherd">Ammon Shepherd</a></span>: 3D Printing, Electronics, Programming, Web Development, Digital Humanities, Sewing, Laser Cutter, CNC Router, Arduino, Raspberry Pi, 3D Modeling
-		</li>
-	</ul>
- 	<h3>Scholars&rsquo; Lab Staff Technologists</h3>
-	<ul>
-		<li>
-			<img src="{{ site.baseurl }}/assets/img/people/laura-miller.jpg" alt="Laura Miller"><br>
-			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/laura-miller">Laura Miller</a></span>: 3D Printing, Photogrammetry, Digital Humanities
-		</li>
-		<li>
-			<img src="{{ site.baseurl }}/assets/img/people/shane-lin.jpg" alt="Shane Lin"><br>
-			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/shane-lin">Shane Lin</a></span>: 3D Printing, Programming, Digital Humanities
-		</li>
-		<li>
-			<img src="{{ site.baseurl }}/assets/img/people/jeremy-boggs.jpg" alt="Jeremy Boggs"><br>
-			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/jeremy-boggs">Jeremy Boggs</a></span>: 3D Printing, Electronics, Programming, Digital Humanities
-		</li>
-		<li>
-			<img src="{{ site.baseurl }}/assets/img/people/amanda-visconti.jpg" alt="Amanda Wyatt Visconti"><br>
-			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/amanda-visconti">Amanda Visconti</a></span>: Digital Humanities, resin casting
-		</li>
-	</ul>
-</section>
-
 <section id="makerspace-students">
 	<h3>Student Technologists</h3>
 	<ul>
+		<li><span>Julian Cordero:</span> 3D printing, Button Making</li>
+		<li><span>Fatima Elalami:</span> Crafting, Button Making</li>
 		<li><span>Link Fu:</span> Button Making, Stickers, Textiles, Crafting, Cosplay</li>
-		<li><span>Yejun Kim</span> Electronics, CAD</li>
-		<li><span>Jordan Phan:</span> Sewing, Textiles</li>
-		<li><span>Leah Phan:</span> CAD, Buttons, Stickers, Stamps, Paper Crafts</li>
-		<li><span>Tingyo Tan:</span> CAD, Desktop CNC, 3D Printing, Electronics, Photogrammetry</li>
+		<li><span>Yejun Kim:</span> 3D Printing, Electronics, CAD, Button Making</li>
+		<li><span>Leah Phan:</span> CAD, Button Making, Stickers, Stamps, Paper Crafts</li>
+		<li><span>Tingyo Tan:</span> CAD, Desktop CNC, 3D Printing, Electronics, Photogrammetry, Laser Cutter, Button Making</li>
+		<li><span>Amy Tran:</span> Jewelry, Crafting, Button Making</li>
 		<li><span>Jennifer Truong:</span> Button Making, Stickers, Wacom Drawing Tablet, Digital Artwork</li>
+		<li><span>Mara Williams:</span> Crafting, Button Making</li>
+		<li><span>Hunter Zoller:</span> 3D printing, Laser Cutter, Button Making</li>
+		<li><span>Hans Yang:</span> 3D printing, Button Making</li>
 	</ul>
 	<h3>Critical Making Fellow</h3>
 	<ul>
@@ -214,11 +202,33 @@ order: 3
 	</ul>
 	<h3>Makerspace Volunteers</h3>
 	<ul>
-		<li><span>Sarah Hemler:</span> 3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore</li>
-		<li><span>Megan Masri::</span> Button Making, Stickers</li>
-		<li><span>Qianqian Shao:</span> Fabrics, Textiles, Sewing</li>
-		<li><span>Hans Yang:</span> 3D printing</li>
+		<li><span>Sarah Hemler:</span> 3D Printing, Solidworks and AutoDesk, Electronics, Photoshop Software and Drawing Tablets, Audacity and Musescore, Button Making</li>
+		<li><span>Qianqian Shao:</span> Fabrics, Textiles, Sewing, Button Making, Crafting</li>
 	</ul>
 </section>
+
+ 	<h3>Makerspace Manager &amp; Lead Research Technologist</h3>
+	<ul>
+		<li>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/ammon-shepherd">Ammon Shepherd</a></span>: 3D Printing, Electronics, Programming, Web Development, Sewing, Laser Cutter, CNC Router, Arduino, Raspberry Pi, 3D Modeling, Crafting, Button Making, Digital Humanities
+		</li>
+	</ul>
+ 	<h3>Scholars&rsquo; Lab Staff Technologists</h3>
+	<ul>
+		<li>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/laura-miller">Laura Miller</a></span>: 3D Printing, Photogrammetry, Digital Humanities
+		</li>
+		<li>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/shane-lin">Shane Lin</a></span>: 3D Printing, Programming, Digital Humanities
+		</li>
+		<li>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/jeremy-boggs">Jeremy Boggs</a></span>: 3D Printing, Electronics, Programming, Digital Humanities
+		</li>
+		<li>
+			<span class="makerspace-person__name"><a href="{{ site.baseurl }}/people/amanda-visconti">Amanda Visconti</a></span>: Digital Humanities, Resin Casting, Button Making
+		</li>
+	</ul>
+</section>
+
 
 </section>
