Edited notes from Library Zoom on topic

--- a/pages/about/accessibility.html
+++ b/pages/about/accessibility.html
@@ -77,11 +77,9 @@ If you have questions about or anticipate any issues with full access of our spa
 <h3>Federal ADA requirements</h3>
 <p>WCAG 2.1 AA compliance is federally required by April 2026. As noted above, we already voluntarily follow these guidelines or better with our current work. Therefore, our focus will be on making sure that voluntary following converts to mandatory; that all staff understand how to follow and advise on these requirements; that we include advising and discussion of these requirements in projects, consults, and collaborations going forward; and that we address legacy projects that may not fully follow these guidelines.</p>
 
-Section 508
+<p>There are exceptions to certain compliance rules, including five types of exceptions that may be relevant to our work. Each has criteria. Pre-existing social media posts and archived web content do not require remediation. Minor deviations from standards might be acceptable if they do not significantly impact user experience. (Per Communications AUL, Aug-Sept 2024 Library group zoom on accessibility)</p>
 
-Elyse discussed the exceptions to certain compliance rules, highlighting five types of exceptions that are relevant to their work. She explained the criteria for each exception, emphasizing that pre-existing social media posts and archived web content do not require remediation, while other exceptions require specific criteria to be met. Elyse also clarified that minor deviations from standards might be acceptable if they do not significantly impact user experience.
-
-
+<p>Section 508: #tk</p>
 
 <h3> Our work + the federal access & ADA requirements</h3>
 <p>Much of our work already meets these required guidelines, as part of our following best practices, though this is not true of all our work (especially as we move further into the past, given best practices and the Web have evolved since our 2006 creation as a research center). This section discusses work that may need added or different approaches given the new guidelines.</p>
