--- a/pages/about/accessibility.html
+++ b/pages/about/accessibility.html
@@ -12,7 +12,7 @@ redirect_from:
 <h2>Web accessibility</h2>
 <p>In terms of web accessibility, we strive to make our the built environment of the Scholars&#39; Lab website and social media pleasant, easy to access, and <a href="http://www.ada.gov/">ADA-compliant</a>.
 
-<p>For this website, we follow <a href="http://www.w3.org/WAI/WCAG20/quickref/">WCAG 2.0</a> and <a href="http://www.section508.gov/">Section 508</a> guidelines. Our markup and presentation adhere to W3G&#39;s standards for HTML5 and CSS3, and in doing so include many features meant to enhance the accessibility of our site, including:</p>
+<p>For this website, we follow <a href="http://www.w3.org/WAI/WCAG20/quickref/">WCAG 2.2 AA standard</a> or better, and <a href="http://www.section508.gov/">Section 508</a> guidelines. Our markup and presentation adhere to W3G&#39;s standards for HTML5 and CSS3, and in doing so include many features meant to enhance the accessibility of our site, including:</p>
 	
 <ul>
 <li>Correct ordering of headings to aid in navigation;</li>
@@ -24,7 +24,7 @@ redirect_from:
 
 <p>We use several tools to assess accessibility on our site, including the <a href="http://wave.webaim.org/">Wave evaluation tool</a> by <a href="http://webaim.org">WebAIM</a> and <a href="http://pa11y.org/">Pa11y command line interface tool</a> by <a href="https://github.com/nature">Nature Publishing Group</a>.</p>
 
-<p>We strive to follow similar practices on all our websites and when consulting and teaching about web design, aiming not for the legal minimum but for the best experience for all. For example, accessible and universal design are major components of our <a href="/praxis-program-fellowships">Praxis Program</a>'s <a href="https://designlab.jeremyboggs.net/">DesignLab</a> semester-long course, taught annually by <a href="/people/jeremy-boggs">Head of R&D Jeremy Boggs</a>.</p>
+<p>We strive to follow similar practices on all our websites and when consulting and teaching about web design, aiming not for the legal minimum but for the best experience for all.</p>
 
 <p>On our social media, we strive to always use good descriptive alt text on images.</p>
 
@@ -46,9 +46,12 @@ If you have questions about or anticipate any issues with full access of our spa
 
 <p>Our new makerspace room (Shannon 308i) was designed with physical access in mind, and includes options like worktables that can be raised and lowered to wheelchair sitting and standing heights. Please contact <a href="/people/ammon-shepherd">Makerspace Manager Ammon Shepherd</a> if you have questions about physical makerspace access.</p>
 
-Some doors in the Shannon Library building do not currently offer push-button door-openers. These include several of our public doors, most of which we prop open during work hours (makerspace, consultation room, both entrances, grad office, doors between Text Aisle and Common Room). The door into our staff workroom space, behind which are several staff offices and our grad office, doesn't have a door-opener button and cannot be left propped open (due to the interior containing non-public space).
+<p>Some doors in the Shannon Library building do not currently offer push-button door-openers. These include several of our public doors, most of which we prop open during work hours (makerspace, consultation room, both entrances, grad office, doors between Text Aisle and Common Room). The door into our staff workroom space, behind which are several staff offices and our grad office, doesn't have a door-opener button and cannot be left propped open (due to the interior containing non-public space).</p>
 
 <h2>Ongoing learning & research on accessibility</h2>
+
+<p>Accessibility is an area of staff research interest, in addition to a broader commitment of the lab we strive for in all our work. For example, accessible and universal design are major components of our <a href="/praxis-program-fellowships">Praxis Program</a>'s <a href="https://designlab.jeremyboggs.net/lessons/accessibility.html">DesignLab</a> semester-long course, taught annually by <a href="/people/jeremy-boggs">Head of R&D Jeremy Boggs</a>. Jeremy was also an instructor for the <a href="https://archive.mith.umd.edu/mith-2020/index.html%3Fp=11394.html">Building an Accessible Future for the Humanities Project</a>. Director <a href="/people/amanda-visconti">Amanda Wyatt Visconti</a> was a project team member and developer (at the Maryland Institute for Technology in the Humanities) on the <a href="https://archive.mith.umd.edu/mith-2020/research/braillesc/">Making the Digital Humanities More Open</a> projects' development of a WordPress Braille plugin, allowing the vast amount of digital humanities WP-hosted content to become more easily Braille-readable.</p>
+
 <p>Below are our research blog posts related to accessibility:</p>
 <ul>
 {%- for post in site.tags.accessibility -%}
@@ -59,3 +62,4 @@ Some doors in the Shannon Library building do not currently offer push-button do
 	</li>
 {%- endfor -%}
 </ul>
+
