--- a/collections/_work/zine-bakery.html
+++ b/collections/_work/zine-bakery.html
@@ -23,7 +23,7 @@ end-year: current
 <ul>
 <li>Copies of print zines distributed on a rack in SLab's Common Room public space*</li>
 <li>A digital catalogue of zines, combining the zines we can distribute publicly with others we cannot distribute for various reasons (including only having a single non-reproducable copy in our collection, or zines purchased with staff personal funds).</li>
-<li>A subset of zine titles and metadata in the catalogue available via a public interface: <a href="https://airtable.com/shr3DDj5X1uNPUzyn/tbl88Svfsrkg3YV5Z">Zine Bakery's public zine catalogue view</a></li>
+<li>A subset of zine titles and metadata in the catalogue available via a public interface: <a href="https://zinebakery.com/pages/zines">Zine Bakery's public zine catalogue view</a></li>
 <li>An interest in collecting a copy of any zines authored by or about UVA and Charlottesville folks that the zines' authors wish to share (please email visconti@virginia.edu with a digital copy)</li>
 </ul>
 
