fixed typos in my project

--- a/collections/_work/zine-bakery.html
+++ b/collections/_work/zine-bakery.html
@@ -13,7 +13,7 @@ research-category: Internal Projects & Community Service
 start-year: 2018
 end-year: current
 ---
-<p>Amanda Wyatt Visconti maintains a collection of zines by authors and on topics of interest to them (Zine Bakery) as well as authors DHy zines. A majority subset of which are also of interest to the Lab and its community (Zine Bakery & Scholars' Lab), including zines on feminist approaches to technology, digital scholarship tutorials, creativity and making, and social justice advocacy.</p>
+<p>Amanda Wyatt Visconti maintains a collection of zines by authors and on topics of interest to them (Zine Bakery). A majority subset of these are also of interest to the Lab and its community (Zine Bakery @ Scholars' Lab), including zines on feminist approaches to technology, digital scholarship tutorials, creativity and making, and social justice advocacy.</p>
 
 <p class="project-image"><img src="{{ site.url }}/assets/img/work/zinebakery-atslab.png" alt="Logo for the Zine Bakery @ Scholars' Lab subset of the Zine Bakery project"></p>
 
