Add 3D printer cert button, fix images, style buttons
And by fixing images, I mean that I messed with the CSS to get the
equipment images to look much better, align more properly, and wrap
appropriately. I think it looks much nicer.

--- a/pages/consult/makerspace/makerspace.html
+++ b/pages/consult/makerspace/makerspace.html
@@ -29,7 +29,7 @@ order: 3
 		}
 		)
     </script>
-    <button id="mysched_41069" href="#">Schedule Appointment</button>
+    <button class="makerspace-button" id="mysched_41069" href="#">Schedule Appointment</button>
 </section> <!-- ends .makerspace-mission-vision-top -->
 
 <section class="hours-and-location">
@@ -66,7 +66,7 @@ order: 3
 	<p>The Makerspace is open to all UVA students, staff and faculty, as well as the general public. We hope you will find the equipment, resources, and support to help you MAKE anything (within reason) you want to make.</p>
 	<p>You can stop in any time during our open hours, or contact us at <a href="mailto:slabmakerspace@virginia.edu">slabmakerspace@virginia.edu</a> to schedule an appointment with a Makerspace Technologist or Scholars&rsquo; Lab staff to discuss your project.</p>
 	<h3>Equipment</h3>
-	<p>All equipment can be reserved for use in the Makerspace. Use the <button id="eq_0" href="#">Book Equipment</button>
+	<p>All equipment can be reserved for use in the Makerspace. Use the <button class="makerspace-button" id="eq_0" href="#">Book Equipment</button>
         	<script src="https://cal.lib.virginia.edu/js/widget.min.js"></script>
 			<script>
 				jQuery(function () {
@@ -119,7 +119,11 @@ order: 3
 
 <div id="printers">
 	<h3>3D Printing</h3>
-	<p>We have four <a href="https://en.wikipedia.org/wiki/Fused_filament_fabrication">FFF</a> style printers and one <a href="https://en.wikipedia.org/wiki/Stereolithography">Resin (SLA)</a> printer available for reservation. To use the printers, you can come in during open hours for in-person training and on-the-spot reservation. In order to reserve printers for future use, you will need to complete an on-line certification. The on-line certification is forthcoming, so the only way to use the 3D printers for now is to come in during open hours and speak with a Technologist to reserve a printer after in-person training.</p>
+	<p>We have four <a href="https://en.wikipedia.org/wiki/Fused_filament_fabrication">FFF</a> style printers and one <a href="https://en.wikipedia.org/wiki/Stereolithography">Resin (SLA)</a> printer available for reservation. To use the printers, you can come in during open hours for in-person training and on-the-spot reservation. In order to reserve the FFF printers before coming to the Makerspace, you will need to complete an on-line certification.</p>
+	
+	<a id="3d-printer-certification" class="makerspace-button" href="https://virginia.libwizard.com/f/3D_printer_certification">3D Printer Certification</a>
+
+	<p>Resin printer certification is forthcoming.</p>
 	<p>Self-service 3D printing is also available through the <a href="https://www.library.virginia.edu/services/3d-printing/">3D Printing Studio</a> in the Robertson Media Center in Clemons Library. To use the printers there, you need to complete an <a href="https://www.library.virginia.edu/services/3d-printing/">online training</a>, then reserve a 3D printer during their <a href="https://www.library.virginia.edu/hours">open hours</a>. Email <a href="mailto:teachlearn@virginia.edu">teachlearn@virginia.edu</a> with any questions.</p>
  	<p>The 3D printers are completely different from each other in each space, so training on 3D Printing Studio printers does not automatically grant access to the Makerspace printers.</p>
  	<p>Click a printer below to check availability or reserve:</p>
