--- a/pages/scholarship/work.html
+++ b/pages/scholarship/work.html
@@ -46,7 +46,7 @@ redirect_from:
 	{{ uva-areas | markdownify }}
 	</div>
 	<div class="fieldwork-sites">
-		<h3>External fieldwork sites</h3>
+		<h3>External community collaborations & fieldwork sites</h3>
 		<!-- See /_includes/_content-includes for the editable file containing the list of places we've done external fieldwork.-->
 	{% capture fieldwork %}{% include _content-includes/fieldwork.md %}{% endcapture %}
 	{{ fieldwork | markdownify }}
