--- a/pages/consult/spatial-technologies/spatial-technologies.html
+++ b/pages/consult/spatial-technologies/spatial-technologies.html
@@ -24,7 +24,7 @@ redirect_from:
 		<ul>
 			<li>Staff: <a href="/people/chris-gist">Chris Gist</a> and <a href="/people/drew-macqueen">Drew MacQueen</a></li>
 			<li>Office: Shannon Library, Room 308 H</li>
-		  	<li>Hours: Weekdays 9-5 in general, but email the GIS folks at <a href="mailto:uvagis@virginia.edu">uvagis@virginia.edu</a> in advance if you need us to be there.</li>
+		  	<li>Hours: Generally available weekdays 9-5, but please email <a href="mailto:uvagis@virginia.edu">uvagis@virginia.edu</a> for an appointment. </li>
 		</ul>		
 </section>
 
